grammar.js
    source_file: $ => seq(repeat($._line), optional($.statement), optional($._error_token_forms)),

    _line: $ => choice(seq($.statement, $._line_end), $._line_end),

    // A line ends with a terminator; during error recovery also with a
    // recovery line break, valid only here, in `_try_line` and after the
    // header of a loop, function, TRY, CATCH or directive (`_body_start`),
    // not after an IF header and not inside brackets (ADR-0008).
    _terminator: $ => choice($._newline, ':'),
    _newline: _ => /\r?\n/,

    // BS-LEX-012–014: `'` or whole-word REM, to the end of the line. Declared
    // before `identifier`: for exactly `rem` both tokens match three characters
    // and the earlier token wins (REM mechanism 1, grammar-design §3).
    comment: _ => token(choice(
      /'[^\r\n]*/,
      /[rR][eE][mM]([ \t][^\r\n]*)?/,
    )),

    // BS-STMT-035: a block starts with the terminator that ends its header.
    block: $ => choice($._terminator, seq($._block_head, repeat($._line))),

    // The terminator and the first line as one parse-stack entry of an open
    // block, which bounds the end-of-input work on deeply nested unclosed
    // blocks (S07-M01, grammar-design §7).
    _block_head: $ => seq($._terminator, choice(seq($.statement, $._line_end), $._line_end)),

    // The body of a loop, function, CATCH or directive: after a malformed header, recovery may
    // also end the header at a recovery line break (ADR-0008). An IF body may not,
    // or a single-line IF with an error would become a block IF.
    _body: $ => choice($._body_start, seq($._body_head, repeat($._line))),

    _assignment_target: $ => choice(
      $.identifier,
      alias($._stmt_member, $.member_expression),
      alias($._stmt_index, $.index_expression),
    ),

    // BS-STMT-001, 002, BS-EXP-020: `=` here is assignment; inside an
    // expression it is comparison.
    assignment_statement: $ => seq(
      field('left', $._assignment_target),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '\\=', '<<=', '>>=')),
      field('right', $.expression),
    ),

    // BS-STMT-003, 004.
    if_statement: $ => choice($._block_if, $._single_line_if),

    _block_if: $ => seq(
      kw('if'),
      field('condition', $.expression),
      optional(kw('then')),
      field('consequence', $.block),
      repeat(field('alternative', $.else_if_clause)),
      optional(field('alternative', $.else_clause)),
      choice(endKw('if'), kw('endif')),
    ),

    _single_line_if: $ => prec.right(PREC.LIST, seq(
      kw('if'),
      field('condition', $.expression),
      optional(kw('then')),
      field('consequence', alias($._inline_block, $.block)),
      optional(field('alternative', alias($._inline_else, $.else_clause))),
    )),

    print_statement: $ => seq(choice(kw('print'), '?'), optional($._print_items)),

    // Four-item groups reduce hidden repetition nodes and deletion allocations.
    // Every positive item count is 4k + r, r in 1..4; public items stay unchanged.
    // The error-recovery scanner bounds malformed runs (B4-01, ADR-0008).
    // Items name expression kinds directly, without an `expression` wrapper.
    _print_items: $ => seq(
      repeat(seq($._print_item, $._print_item, $._print_item, $._print_item)),
      choice(
        $._print_item,
        seq($._print_item, $._print_item),
        seq($._print_item, $._print_item, $._print_item),
        seq($._print_item, $._print_item, $._print_item, $._print_item),
      ),
    ),

    dim_statement: $ => seq(
      kw('dim'),
      field('name', $.identifier),
      choice(
        seq(alias($.open_bracket, '['), commaSep1(field('dimension', $.expression)), ']'),
        seq(alias($.open_parenthesis, '('), commaSep1(field('dimension', $.expression)), ')'),
      ),
    ),

    // BS-STMT-027, BS-LEX-027, 028: a label is a whole statement.
    label_statement: $ => seq(field('name', $.identifier), ':'),

    // BS-STMT-029, 030: `end` alone; the `end X` terminators are single tokens.
    _postfix_operand: $ => prec(PREC.POSTFIX, choice(
      $.identifier,
      $.parenthesized_expression,
      $.call_expression,
      $.member_expression,
      $.index_expression,
      $.attribute_expression,
    )),

    // BS-EXP-002.
    member_expression: $ => prec(PREC.POSTFIX, seq(
      field('object', choice($._postfix_operand, $.number, $.string)),
      choice('.', '?.'),
      field('property', $.identifier),
    )),

    index_expression: $ => prec(PREC.POSTFIX, seq(
      field('object', $._postfix_operand),
      choice(alias($.open_bracket, '['), '?['),
      commaSep1(field('index', $.expression)),
      ']',
    )),

    _pow_left: $ => prec(PREC.POSTFIX, $.expression),

    // BS-EXP-011, 013-017, 019, 020.
    binary_expression: $ => choice(
      prec.right(PREC.EXPONENT, seq(
        field('left', $._pow_left), field('operator', '^'), field('right', $.expression),
      )),
      ...[
        [PREC.MULTIPLICATIVE, choice('*', '/', kw('mod'), '\\')],
        [PREC.ADDITIVE, choice(alias($.plus_sign, '+'), alias($.minus_sign, '-'))],
        [PREC.SHIFT, choice('<<', '>>')],
        [PREC.COMPARE, choice('=', '<>', '<', '>', '<=', '>=')],
        [PREC.AND, kw('and')],
        [PREC.OR, kw('or')],
      ].map(([p, operator]) => prec.left(p, seq(
        field('left', $.expression), field('operator', operator), field('right', $.expression),
      ))),
    ),

    // ------------------------------------------------ collections (§9)
    // BS-ARRAY-001-003: line breaks after `[`, between elements (with or
    // without commas) and before `]`; a trailing separator is tolerated.
    array_literal: $ => seq(
      alias($.open_bracket, '['),
      repeat($._newline),
      optional(seq($.expression, repeat(seq($._sep, $.expression)), optional($._sep))),
      ']',
    ),

    // BS-AA-001-004: the same separator rules for entries.
    associative_array_literal: $ => seq(
      '{',
      repeat($._newline),
      optional(seq(
        $.associative_array_entry,
        repeat(seq($._sep, $.associative_array_entry)),
        optional($._sep),
      )),
      '}',
    ),

    _sep: $ => choice(seq(',', repeat($._newline)), repeat1($._newline)),

    // BS-AA-001, 002, BS-LEX-024: keyword words are identifier keys by
    // context-aware lexing.
    associative_array_entry: $ => seq(
      field('key', choice($.identifier, $.string)),
      ':',
      field('value', $.expression),
    ),

    // ------------------------------------------------- error handling (§10)
    // BS-ERR-001-005: CATCH is required and takes one identifier.
    try_statement: $ => seq(
      alias($.try_keyword, 'try'),
      field('body', alias($._try_body, $.block)),
      field('handler', $.catch_clause),
      choice(endKw('try'), kw('endtry')),
    ),

    // A separate line rule keeps `catch` a keyword only directly in a TRY
    // body (grammar-design §4).
    _try_body: $ => seq($._body_start, repeat($._try_line)),

    catch_clause: $ => seq(kw('catch'), field('variable', $.identifier), field('body', alias($._body, $.block))),

    throw_statement: $ => seq(kw('throw'), field('value', $.expression)),

    // ----------------------------------------------------- functions (§8)
    // BS-FUNC-001-003, 005, 006: FUNCTION and SUB share the node; each closes
    // only with its own terminator (BS-STMT-036).
    function_declaration: $ => choice(
      seq(
        kw('function'),
        field('name', $.identifier),
        field('parameters', $.parameter_list),
        optional(seq(kw('as'), field('return_type', $.type))),
        field('body', alias($._body, $.block)),
        choice(endKw('function'), kw('endfunction')),
      ),
      seq(
        kw('sub'),
        field('name', $.identifier),
        field('parameters', $.parameter_list),
        field('body', alias($._body, $.block)),
        choice(endKw('sub'), kw('endsub')),
      ),
    ),

    // BS-FUNC-009-011.
    parameter_list: $ => seq(
      alias($.open_parenthesis, '('),
      optional(seq($.parameter, repeat(seq(',', repeat($._newline), $.parameter)))),
      ')',
    ),

    type: _ => choice(
      kw('integer'), kw('float'), kw('double'), kw('boolean'), kw('string'),
      kw('object'), kw('dynamic'), kw('function'), kw('void'),
    ),

    // --------------------------------------------------- literals (§3)
    // BS-LIT-003, 005-012: decimal (fraction, exponent `e`/`d`, suffix) and hex.
    // A digit run followed by `.` and a letter is `number` then `.` (BS-LIT-014).
    number: _ => token(choice(
      /(\d+(\.\d+)?|\.\d+)([eEdD][+-]?\d+)?[%!#&]?/,
      /&[hH][0-9a-fA-F]+&?/,
    )),

    // BS-LIT-015-017: one line; `""` is the only escape.
    string: _ => /"([^"\r\n]|"")*"/,

    // BS-LIT-001, 002, 019.
    true: _ => new RegExp(ci('true')),
    false: _ => new RegExp(ci('false')),
    const_directive: $ => seq(
      directive('const'),
      field('name', $.identifier),
      '=',
      field('value', choice($.identifier, $.true, $.false)),
    ),

    // BS-COND-007: a literal `false` branch is opaque `inactive_text`
    // (ADR-0004 spike, design V1; grammar-design §11).
    if_directive: $ => seq(
      directive('if', 1),
      choice(
        seq(field('condition', $._cc_condition), field('consequence', alias($._body, $.block))),
        seq(field('condition', $.false), field('consequence', $.inactive_text)),
      ),
      repeat(field('alternative', $.else_if_directive)),
      optional(field('alternative', $.else_directive)),
      directive('end', 1),
      kw('if'),
    ),

    else_if_directive: $ => seq(
      directive('else', 1),
      kw('if'),
      choice(
        seq(field('condition', $._cc_condition), field('consequence', alias($._body, $.block))),
        seq(field('condition', $.false), field('consequence', $.inactive_text)),
      ),
    ),

    else_directive: $ => seq(directive('else', 1), field('body', alias($._body, $.block))),

    error_directive: $ => seq(directive('error'), optional(field('message', $.error_message))),

    // BS-COND-004: free text to the end of the line, apostrophes included.
    error_message: _ => token(prec(1, /[^ \t\r\n][^\r\n]*/)),

    _cc_condition: $ => choice($.identifier, $.true),

    // Region lines are hidden `_inactive_line` tokens. Lines starting with `'`
    // or whole-word REM match `comment` at equal length and precedence, and
    // `comment` is declared first, so they stay `comment` children. Nested
    // `#if` blocks are balanced by `_inactive_if`; `#if`, `#else` and `#end`
    // have lexical precedence 1 so they are recognised inside the region.
    inactive_text: $ => seq($._newline, repeat($._inactive_item)),

    _inactive_item: $ => choice($._inactive_line, $._newline, $._inactive_if),

    // A `#` line is text unless it starts with the whole word `#if`, `#else`
    // or `#end` (`#elseif` and `#endif` included): the second alternative never
    // matches those words as a prefix, and a longer word (`#ifdef`, `#elsewhere`,
    // `#endregion`) is text through the third, whose precedence 2 beats the
    // completed directive word (grammar-design §11).
    _error_token_forms: $ => seq($._raw_token_marker, choice(
      $.open_parenthesis, $.open_bracket, $.minus_sign, $.plus_sign, $.not_operator, $.try_keyword,
    )),

    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*[$%!#&]?/,
  },
});
