test/corpus/conditional-compilation.txt
================================================================================
BS-COND-001: #const forms
================================================================================
#const someFlag = true
#const anotherFlag = false
#const someOtherFlag = someFlag
--------------------------------------------------------------------------------

(source_file
  (const_directive
    name: (identifier)
    value: (true))
  (const_directive
    name: (identifier)
    value: (false))
  (const_directive
    name: (identifier)
    value: (identifier)))

================================================================================
BS-COND-002: #if around statements
================================================================================
#if mylibrary_enable_detailed_logging
    ? "hello world"
#end if
--------------------------------------------------------------------------------

(source_file
  (if_directive
    condition: (identifier)
    consequence: (block
      (print_statement
        (string)))))

================================================================================
BS-COND-002: #if true and #if name bodies are code
================================================================================
#if true
  x = 1
#end if
#if DEBUG
  y = 2
#end if
--------------------------------------------------------------------------------

(source_file
  (if_directive
    condition: (true)
    consequence: (block
      (assignment_statement
        left: (identifier)
        right: (number))))
  (if_directive
    condition: (identifier)
    consequence: (block
      (assignment_statement
        left: (identifier)
        right: (number)))))

================================================================================
BS-COND-003: #else if and #else branches
================================================================================
#const FeatureA = true
#if FeatureA
  'code for Feature A
#else if FeatureB
  x = 1
#else
  y = 2
#end if
--------------------------------------------------------------------------------

(source_file
  (const_directive
    name: (identifier)
    value: (true))
  (if_directive
    condition: (identifier)
    consequence: (block
      (comment))
    alternative: (else_if_directive
      condition: (identifier)
      consequence: (block
        (assignment_statement
          left: (identifier)
          right: (number))))
    alternative: (else_directive
      body: (block
        (assignment_statement
          left: (identifier)
          right: (number))))))

================================================================================
BS-COND-004: #error with free text
================================================================================
#if FeatureAImplemented
  ' code
#else
  #error TO DO: implement feature A, don't forget
#end if
--------------------------------------------------------------------------------

(source_file
  (if_directive
    condition: (identifier)
    consequence: (block
      (comment))
    alternative: (else_directive
      body: (block
        (error_directive
          message: (error_message))))))

================================================================================
BS-COND-005: directives in mixed case
================================================================================
#CONST Flag = TRUE
#If flag
  x = 1
#Else If other
#ELSE
#End If
--------------------------------------------------------------------------------

(source_file
  (const_directive
    name: (identifier)
    value: (true))
  (if_directive
    condition: (identifier)
    consequence: (block
      (assignment_statement
        left: (identifier)
        right: (number)))
    alternative: (else_if_directive
      condition: (identifier)
      consequence: (block))
    alternative: (else_directive
      body: (block))))

================================================================================
BS-COND-006: #if around function declarations
================================================================================
#if DEBUG
function debugOnly()
end function
#end if
--------------------------------------------------------------------------------

(source_file
  (if_directive
    condition: (identifier)
    consequence: (block
      (function_declaration
        name: (identifier)
        parameters: (parameter_list)
        body: (block)))))

================================================================================
BS-COND-008: indented directives with comments
================================================================================
sub main()
    #if DEBUG ' debug only
        print "d"
    #else   if   OTHER
    #end	if ' done
end sub
--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (if_directive
        condition: (identifier)
        (comment)
        consequence: (block
          (print_statement
            (string)))
        alternative: (else_if_directive
          condition: (identifier)
          consequence: (block)))
      (comment))))

================================================================================
BS-COND-012: #if inside a function body
================================================================================
sub main()
#if DEBUG
  print "d"
#end if
end sub
--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (if_directive
        condition: (identifier)
        consequence: (block
          (print_statement
            (string)))))))

================================================================================
BS-COND-012: nested #if blocks
================================================================================
#if A
  #if B
    x = 1
  #end if
#end if
--------------------------------------------------------------------------------

(source_file
  (if_directive
    condition: (identifier)
    consequence: (block
      (if_directive
        condition: (identifier)
        consequence: (block
          (assignment_statement
            left: (identifier)
            right: (number)))))))

================================================================================
BS-COND-013: #const with a non-boolean value
:error
================================================================================
#const x = 5
--------------------------------------------------------------------------------

================================================================================
BS-COND-007: block comment with prose
================================================================================
#if false
    This is a function that does nothing.
    It takes no parameters.
#end if
function foo() as void
    'do nothing
end function
--------------------------------------------------------------------------------

(source_file
  (if_directive
    condition: (false)
    consequence: (inactive_text))
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    return_type: (type)
    body: (block
      (comment))))

================================================================================
BS-COND-007: commented-out function
================================================================================
#if false
    function Order66() as void
        'code for Order66
    end function
#end if
--------------------------------------------------------------------------------

(source_file
  (if_directive
    condition: (false)
    consequence: (inactive_text
      (comment))))

================================================================================
BS-COND-007: spike S3 case variants of #if false
================================================================================
#IF FALSE
    Some prose here.
#END IF
#If False
    More prose.
#End If
--------------------------------------------------------------------------------

(source_file
  (if_directive
    condition: (false)
    consequence: (inactive_text))
  (if_directive
    condition: (false)
    consequence: (inactive_text)))

================================================================================
BS-COND-007: spike S4 #if falsey is code
================================================================================
#if falsey
    x = 1
#end if
#if falsey ' note
    y = 2
#end if
--------------------------------------------------------------------------------

(source_file
  (if_directive
    condition: (identifier)
    consequence: (block
      (assignment_statement
        left: (identifier)
        right: (number))))
  (if_directive
    condition: (identifier)
    (comment)
    consequence: (block
      (assignment_statement
        left: (identifier)
        right: (number)))))

================================================================================
BS-COND-007: spike S5 comment after #if false
================================================================================
#if false ' note
    Prose with words.
#end if
--------------------------------------------------------------------------------

(source_file
  (if_directive
    condition: (false)
    (comment)
    consequence: (inactive_text)))

================================================================================
BS-COND-007: spike S6 #else after a false branch
================================================================================
#if false
    Prose line.
#else
    x = 1
#end if
--------------------------------------------------------------------------------

(source_file
  (if_directive
    condition: (false)
    consequence: (inactive_text)
    alternative: (else_directive
      body: (block
        (assignment_statement
          left: (identifier)
          right: (number))))))

================================================================================
BS-COND-007: spike S7 #else if after a false branch
================================================================================
#if false
    Prose line.
#else if DEBUG
    x = 1
#end if
--------------------------------------------------------------------------------

(source_file
  (if_directive
    condition: (false)
    consequence: (inactive_text)
    alternative: (else_if_directive
      condition: (identifier)
      consequence: (block
        (assignment_statement
          left: (identifier)
          right: (number))))))

================================================================================
BS-COND-007: spike S8 nested block inside a false region
================================================================================
#if false
    Outer prose.
    #if DEBUG
        Inner prose.
    #else
        More inner prose.
    #end if
    Outer prose again.
#end if
x = 1
--------------------------------------------------------------------------------

(source_file
  (if_directive
    condition: (false)
    consequence: (inactive_text))
  (assignment_statement
    left: (identifier)
    right: (number)))

================================================================================
BS-COND-007: spike S9 directives inside a false region
================================================================================
#if false
    #const flag = true
    #error not compiled
#end if
--------------------------------------------------------------------------------

(source_file
  (if_directive
    condition: (false)
    consequence: (inactive_text)))

================================================================================
BS-COND-007: spike S10 quotes and comments inside a false region
================================================================================
#if false
    Don't "stop" here
    ' a real comment
    REM another comment
#end if
--------------------------------------------------------------------------------

(source_file
  (if_directive
    condition: (false)
    consequence: (inactive_text
      (comment)
      (comment))))

================================================================================
BS-COND-007: spike S11 #else if false
================================================================================
#if DEBUG
    x = 1
#else if false
    Prose line.
#end if
--------------------------------------------------------------------------------

(source_file
  (if_directive
    condition: (identifier)
    consequence: (block
      (assignment_statement
        left: (identifier)
        right: (number)))
    alternative: (else_if_directive
      condition: (false)
      consequence: (inactive_text))))

================================================================================
BS-COND-007: spike S12 REM-like prose inside a false region
================================================================================
#if false
    Remember this.
    REMARK: prose.
    remote control
#end if
--------------------------------------------------------------------------------

(source_file
  (if_directive
    condition: (false)
    consequence: (inactive_text)))

================================================================================
BS-COND-007: spike R1 error before a false region
:error
================================================================================
x = = 1
#if false
    Prose.
#end if
function foo()
end function
--------------------------------------------------------------------------------

================================================================================
BS-COND-007: spike R2 error after a false region
:error
================================================================================
#if false
    Prose.
#end if
x = = 1
function foo()
end function
--------------------------------------------------------------------------------

================================================================================
BS-COND-007: spike R3 false region without #end if
:error
================================================================================
#if false
    Prose without an end.
--------------------------------------------------------------------------------
